package org.switch2022.project.mapper;

public class UpdateSprintDTO {
    public String projectCode;
    public int sprintNumber;
    public String sprintStatus;
}
