@startuml
skinparam linetype ortho
title "US031 - As Project Manager, I want to start the next sprint of a project in the web UI."

class SprintController {
SprintServiceDDD :service
SprintRestDTOMapper :mapper
updateStatusSprint(updateSprintInputDTO)
}

class SprintService {
ISprintRepository :iSprintRepository
updateStatusSprint(updateSprintDomainDTO)
}

class SprintRepository {
SprintJPARepository :sprintJpaRepository
SprintAssemblerData :sprintAssemblerData
getByID(sprintID)
replace(sprint)
}

class SprintAssemblerData {
convertToSprintJpaID(sprintID)
toDomain(sprintJPA)
toData(sprintDDD)

}

Interface SprintJPARepository {
findById(sprintJpaID)
save(sprintJPA)
}

class SprintDDD {
SprintID :sprintID
SprintStatus :status
setStatus(sprintStatus)
}

class SprintJPA {
SprintID :sprintID
SprintStatus :status
}

class SprintRestDTOMapper {
toDomainDTO(updateSprintInputDTO)
toDataDTO(updateSprintDomainDTO)
}

class UpdateSprintDTO  {
String :projectCode
int :sprintNumber
String :sprintStatus
}

class UpdateSprintDomainDTO  {
SprintID :sprintID
SprintStatus :sprintStatus
}

enum SprintStatus{
Planned
Open
Closed
}

class SprintID{
ProjectCode :projectCode
SprintNumber :SprintNumber
}

class ProjectCode{
String :projectCode
}

class SprintNumber{
int sprintNumber
}

interface ISprintRepository
interface Repository
interface CrudRepository
interface DomainId
interface AggregateRoot
interface DomainEntity
interface ValueObject

SprintAssemblerData ..> SprintID
SprintAssemblerData ..> SprintJPA
SprintAssemblerData ..> SprintDDD

SprintRestDTOMapper ..> UpdateSprintDomainDTO
SprintRestDTOMapper ..> UpdateSprintDTO

SprintController o--  SprintService
SprintController o-- SprintRestDTOMapper
SprintController ..> UpdateSprintDTO

SprintService ..> UpdateSprintDomainDTO
SprintService o-- ISprintRepository
SprintService ..> SprintDDD

SprintRepository ..|> ISprintRepository
SprintRepository o-- SprintAssemblerData
SprintRepository o-- SprintJPARepository
SprintRepository ..> SprintDDD
SprintRepository ..> SprintJPA
SprintRepository ..> SprintID


ISprintRepository --|> Repository

SprintJPARepository --|> CrudRepository

SprintDDD *-- SprintStatus
SprintDDD *-- SprintID
SprintDDD -..|> AggregateRoot

SprintStatus -..|> ValueObject

SprintNumber -..|> ValueObject


SprintID ..|> DomainId
SprintID *-- ProjectCode
SprintID *-- SprintNumber


ProjectCode ..|> DomainId

DomainId ..|> ValueObject

AggregateRoot --|> DomainId
AggregateRoot --|> DomainEntity

Repository --|> DomainId
Repository --|> AggregateRoot
@enduml